# ai-design-2026-pub

./: .env.example  .gitignore  README.md  SYLLABUS.md  about.html  assessments.html  header.html  index.html  projects.html  pyproject.toml  scripts.js  style.css
assignments/tool-calling-assignment/: README.md
labs/01_hello_world/: hello_world_3.0.html  history-of-evals.html  homework_01_ollama.ipynb  lesson1_demo.ipynb
labs/02_standalone_agents/: L2_instructor_guide.md  lesson2_answers.ipynb  lesson2_demo.ipynb  lesson2_exercises.ipynb  lesson2_singlecall.ipynb  lesson2_stateful.ipynb  lesson2_testing.ipynb  lesson2_testing_and_metrics.ipynb  mastering_individual_calls.html  stateless_stateful_agents.html
labs/03_context/: lesson4_exercises.ipynb  lesson4_managing_context.ipynb  lesson4_managing_context.py  stateless_stateful_agents.html
labs/03_review_and_judge/: datasets.html  datasets.md  iteration_loop.ipynb
labs/04_managing_context/: stateless_stateful_agents.html
labs/04_tool_calling/: lesson4b_exercises.ipynb  lesson4b_exercises.py  lesson4b_solutions.ipynb  lesson4b_solutions.py  lesson4b_tool_calling.ipynb  lesson4b_tool_calling.py
labs/04b_tool_calling/: tool_calling.html
mock_exams/: additional_questions_w_sol.html  ai_mock_midterm_w_sol.html
playground/: bootstrap_lab.html  index.html
projects/: deliverables.md  universal_scaffolding.md
themes/: dark-forest.css  dark-purple.css  dark-slate.css  dark-terminal.css  dark-warm.css  light-academic.css  light-corporate.css  light-mint.css  light-paper.css  light-startup.css  preview.html
(+298 files in other folders)
